post and patch functional

--- a/Booking Appointment App/frontend/index.html
+++ b/Booking Appointment App/frontend/index.html
@@ -44,7 +44,7 @@
         <label for="email" class="form-label">Email:</label>
         <input type="email" class="form-control" id="email" />
         <label for="phonenumber" class="form-label">Phone Number:</label>
-        <input type="number" class="form-control" id="phoneNumber" />
+        <input type="number" class="form-control" id="phonenumber" />
         <button
           type="submit"
           class="btn btn-success"
